--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <p>Связаться со мной можно по почте <a href="mailto:seigiard@gmail.com">seigiard@gmail.com</a>.</p>
 
 
-        <h2>Проекты</h2>
+        <h2>Я сделал</h2>
         <a href="workshoptab-wizard.html" class="project-link">
 
             <img src="img/workshoptab-wizard/teaser.jpg" alt="Вокршоптаб Визард" style="border-bottom: 1px solid #ddd;">
@@ -51,11 +51,11 @@
 
             <p>Библиотека элементов и код-стайл помогают разработчикам писать код легко.</p -->
         </a>
-        <h3>Интерфейс для конфигуратора DTCO</h3>
+        <!-- <h3>Интерфейс для конфигуратора DTCO</h3>
         <p>Made application mockups and prototype for DTCO Configurator that helps configure digital tachographs.</p>
         <h3>Календарь событий для NCF</h3>
         <h3>Fartskriver SAFE APP</h3>
-        <p>SAFE app was created specifically for drivers to enter necessary information fast, easy and quickly, to share and register existing or possible critical situations that have happened during a working shift. The application is simple and easy to use and does not require a long time to learn. Functionality allows not only enter necessary information but also upload a photo to document. Information sent by drivers in real time is displayed on the admin panel and is available for office staff.</p>
+        <p>SAFE app was created specifically for drivers to enter necessary information fast, easy and quickly, to share and register existing or possible critical situations that have happened during a working shift. The application is simple and easy to use and does not require a long time to learn. Functionality allows not only enter necessary information but also upload a photo to document. Information sent by drivers in real time is displayed on the admin panel and is available for office staff.</p> -->
 
         <script>
         // Baseliner helps debug.
@@ -64,7 +64,8 @@
 
         var _grid_height=33; // This is the space between "baselines".
 
-        if(window.baseliner){baseliner.toggle();}else{var _already_loaded=document.getElementById('baseliner-script');if(_already_loaded){return;};var _baseliner=document.createElement('script');_baseliner.id='baseliner-script';_baseliner.type='text/javascript';_baseliner.src='http://files.keyes.ie/things/baseliner/baseliner-latest.min.js';document.getElementsByTagName('body')[0].appendChild(_baseliner);var loadFunction=function(evt){if(window.baseliner){return;};baseliner=new Baseliner(_grid_height);baseliner.toggle();};_baseliner.onreadystatechange=loadFunction;_baseliner.onload=loadFunction;};})();
+        // if(window.baseliner){baseliner.toggle();}else{var _already_loaded=document.getElementById('baseliner-script');if(_already_loaded){return;};var _baseliner=document.createElement('script');_baseliner.id='baseliner-script';_baseliner.type='text/javascript';_baseliner.src='http://files.keyes.ie/things/baseliner/baseliner-latest.min.js';document.getElementsByTagName('body')[0].appendChild(_baseliner);var loadFunction=function(evt){if(window.baseliner){return;};baseliner=new Baseliner(_grid_height);baseliner.toggle();};_baseliner.onreadystatechange=loadFunction;_baseliner.onload=loadFunction;};
+        })();
         </script>
     </body>
 </html>
