--- a/dtco-configurator.html
+++ b/dtco-configurator.html
@@ -26,7 +26,7 @@
 
         <img src="img/dtco-conf/device-dtco.jpg" alt="Рендер конфигуратора" />
 
-        <h3>Мой вклад</h3>
+        <h3 style="margin-top: 3rem">Мой вклад</h3>
 
         <p>Разработка пользовательских сценариев использования, отрисовка интерфейса системы и&nbsp;макетов в&nbsp;Sketch.</p>
 
