--- a/safe-app.html
+++ b/safe-app.html
@@ -26,7 +26,7 @@
 
         <img src="img/safe/device-safe.jpg" alt="Рендер приложения" style="border-bottom: 1px solid #ddd;" />
 
-        <h3>Мой вклад</h3>
+        <h3 style="margin-top: 3rem">Мой вклад</h3>
 
         <p>Разработка пользовательских сценариев использования, интерфейс системы, разработка гибридного веб-приложения на&nbsp;Ангуляре и&nbsp;Кордове.</p>
 
