ADD dtco configurator article

--- a/dtco-configurator.html
+++ b/dtco-configurator.html
@@ -28,14 +28,28 @@
         <!-- Add your site or application content here -->
         <header>
             <nav><a href="index.html">Андрей Борисенко</a></nav>
-            <h1>Конфигуратор <nobr>Ди-Ти-Си-О</nobr></h1>
+            <h1>Конфигуратор тахографов</h1>
         </header>
 
         <img src="img/dtco-conf/device-dtco.jpg" alt="Рендер конфигуратора" />
 
+        <p>Менеджеры настраивают тахографы партиями по&nbsp;10—20 штук под&nbsp;нужды заказчиков: загружают логотипы для&nbsp;отчётов, выставляют часовой пояс, проверяют настройки отслеживания работы и&nbsp;отдыха.</p>
+        <p>Настройка занимает много времени, если её&nbsp;делать с&nbsp;помощью аналоговых кнопок тахографа</p>
+
+        <img src="img/dtco-conf/dtco-with-smartlink.jpg" />
+
+        <p>Конфигуратор (DTCO Configuration App) упрощает настройку цифровых тахографов. Менеджер подключает к&nbsp;тахографу беспроводной передатчик Смартлинк, выбирает тахограф и&nbsp;настраивает&nbsp;его с&nbsp;телефона.</p>
+
+        <img src="img/dtco-conf/workflow2.png" />
+
+        <p>Программа предупреждает пользователя, если в&nbsp;тахограф не&nbsp;вставлена рабочая карточка менеджера или&nbsp;потеряно соединение со&nbsp;Смартлинком.</p>
+
+        <img src="img/dtco-conf/error-warnings2.png" />
+
+
         <h3 style="margin-top: 3rem">Мой вклад</h3>
 
-        <p>Разработка пользовательских сценариев использования, отрисовка интерфейса системы и&nbsp;макетов в&nbsp;Sketch.</p>
+        <p>Разработка пользовательских сценариев использования, отрисовка интерфейса системы и&nbsp;макетов в&nbsp;Sketch, контроль отрисовки интерфейса под&nbsp;Андроид и&nbsp;АйОс.</p>
 
     </body>
 </html>
