--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <div class="col-1of3">
                 <a href="dtco-configurator.html" class="project-link">
                     <img src="img/dtco-conf/teaser-dtco.png" style="border-bottom: 1px solid #ddd;">
-                    <h3 style="margin-top:0;">Конфигуратор <nobr>Ди-Ти-Си-О</nobr></h3>
+                    <h3 style="margin-top:0;">Конфигуратор тахографов</h3>
                 </a>
             </div>
             <div class="col-1of3">
