--- a/workshoptab-wizard.html
+++ b/workshoptab-wizard.html
@@ -33,7 +33,7 @@
 
         <img src="img/workshoptab-wizard/workshoptab.jpg" alt="Планшет Воркшоптаб" />
 
-        <p>Вокршоптаб Визард проводит проверку грузовых машин с помощью цифрового тахографа и блютус-передатчика СмартЛинк.</p>
+        <p>Вокршоптаб Визард (WorkshopTab Wizard) проводит проверку грузовых машин с помощью цифрового тахографа и блютус-передатчика СмартЛинк.</p>
 
         <p>C интерфейсом визарда удобно работать механику в гараже. Крупный шрифт и элементы интерфейса чётко различимы при недостаточной освещённости и удобны для попадания пальцами.</p>
 
