--- a/safe-app.html
+++ b/safe-app.html
@@ -28,14 +28,23 @@
         <!-- Add your site or application content here -->
         <header>
             <nav><a href="index.html">Андрей Борисенко</a></nav>
-            <h1>Приложение <nobr>С-Э-Й-Ф</nobr></h1>
+            <h1>Приложение <nobr>С-Е-Й-Ф</nobr></h1>
         </header>
 
         <img src="img/safe/device-safe.jpg" alt="Рендер приложения" style="border-bottom: 1px solid #ddd;" />
+        <p>В работе грузовых перевозок очень много бумажной работы. Каждая поездка сопровождается проверкой машины и грузового прицепа в&nbsp;трёх&nbsp;экземплярах. Работодатели вынуждены держать отдел клерков для&nbsp;работы с&nbsp;отчётностью.</p>
+
+        <p>Водители не отличаются пунктуальностью и&nbsp;честностью, поэтому забывают взять или&nbsp;заполнить формы. Также хищение топлива и&nbsp;левые маршруты причиняют катастрофические убытки в&nbsp;один миллиард евро в&nbsp;год в&nbsp;одной Норвегии.</p>
+
+        <p>Приложение С-Е-Й-Ф заменяет бумажные формы проверки автомобиля, контролирует покупку бензина и&nbsp;<abbr title="Горюче-смазочные материалы">ГСМ</abbr> и&nbsp;помогает водителям оформить ДТП или&nbsp;несчастный случай для&nbsp;уведомления работодателя.</p>
+
+        <p>Данные из&nbsp;приложений в&nbsp;реальном времени отображаются в&nbsp;веб-приложении работодателя, а&nbsp;аварийные ситуации сразу отсылаются на&nbsp;электропочту для&nbsp;оперативного реагирования.</p>
+
+        <img src="img/safe/safe-screens.png" alt="Некоторые экраны приложения">
 
         <h3 style="margin-top: 3rem">Мой вклад</h3>
 
-        <p>Разработка пользовательских сценариев использования, интерфейс системы, разработка гибридного веб-приложения на&nbsp;Ангуляре и&nbsp;Кордове.</p>
+        <p>Разработка пользовательских сценариев использования, отрисовка интерфейса системы, программирование гибридного веб-приложения на&nbsp;Ангуляре и&nbsp;Кордове.</p>
 
     </body>
 </html>
