--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <h1>Андрей Борисенко</h1>
         </header>
 
-        <p>Верстать начал в 1998 году, а с 2003 года работаю во фронтенде. Разрабатываю сайты и приложения на JS. Умею сделать так, чтобы сайт работал на ИЕ8, если это нужно.</p>
+        <p>Верстать начал в 1998 году, с 2003 года работаю во фронтенде. Разрабатываю сайты и приложения на JS. Умею сделать так, чтобы сайт работал на ИЕ8, если это нужно.</p>
 
         <p>Руковожу небольшим отделом фронт-энд разработки, чтобы контролировать сроки и сдавать проекты вовремя. С удовольствием работаю удалённо, потому что умею следить за временем.</p>
 
