Update text and styles

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <meta name="msapplication-config" content="img/favicons/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="stylesheet" href="css/system-ui.css">
         <link rel="stylesheet" href="css/typography.css">
         <link rel="stylesheet" href="css/main.css">
     </head>
@@ -40,18 +39,18 @@
 
         <p>Знаю OOP, FRP, Angular, React, Vue, Flux, Redux и прочие модные слова на острие технологий. Интересуюсь новинками веба и стараюсь их пощупать.</p>
 
-        <p>Связаться со мной можно по почте <a href="mailto:seigiard@gmail.com">seigiard@gmail.com</a>.</p>
+        <p>Почта: <a href="mailto:seigiard@gmail.com">seigiard@gmail.com</a>.</p>
 
 
         <h2>Я сделал</h2>
-        <a href="workshoptab-wizard.html" class="project-link">
+        <!-- a href="workshoptab-wizard.html" class="project-link">
 
             <img src="img/workshoptab-wizard/teaser.jpg" alt="Вокршоптаб Визард" style="border-bottom: 1px solid #ddd;">
             <h2 style="margin-top:0">Воркшоптаб Визард</h2>
             <p style="margin-top:0">проводит проверку грузовых машин с помощью цифрового тахографа и блютус-передатчика СмартЛинк.</p>
-        </a>
+        </a -->
         <div class="row">
-            <div class="col-1of3">
+            <!--div class="col-1of3">
                 <a href="dtco-configurator.html" class="project-link">
                     <img src="img/dtco-conf/teaser-dtco.png" style="border-bottom: 1px solid #ddd;">
                     <h3 style="margin-top:0;">Конфигуратор тахографов</h3>
@@ -62,10 +61,19 @@
                     <img src="img/safe/teaser-safe.png">
                     <h3>С-Е-Й-Ф</h3>
                 </a>
+            </div-->
+            <div class="col-1of3">
+                <a href="http://seigiard.com/bureau-school-rating/" class="project-link">
+                    <img src="img/bureau-school-rating/teaser-rating.png" alt="Знакомер">
+                    <h3>Рейтинг студентов школы бюро 2017</h3>
+                </a>
             </div>
-            <div class="col-1of3 not-ready">
-                <img src="img/znkmr/znkmr-teaser.png" alt="Знакомер">
-                <h3>Знакомер</h3>
+            </div-->
+            <div class="col-1of3">
+                <a href="http://seigiard.com/znkmtr/" class="project-link">
+                    <img src="img/znkmr/znkmr-teaser.png" alt="Знакомер">
+                    <h3>Знакомер</h3>
+                </a>
             </div>
         </div>
     </body>
