--- a/resume.html
+++ b/resume.html
@@ -16,7 +16,6 @@
         <meta name="msapplication-config" content="img/favicons/browserconfig.xml">
         <meta name="theme-color" content="#ffffff">
 
-        <link rel="stylesheet" href="css/system-ui.css">
         <link rel="stylesheet" href="css/typography.css">
         <link rel="stylesheet" href="css/main.css">
 
@@ -51,14 +50,14 @@
             <p>Связаться со мной можно по почте <a href="mailto:seigiard@gmail.com">seigiard@gmail.com</a>.</p>
 
             <h2>Я сделал</h2>
-            <a href="workshoptab-wizard.html" class="project-link">
+            <!-- a href="workshoptab-wizard.html" class="project-link">
 
                 <img src="img/workshoptab-wizard/teaser.jpg" alt="Вокршоптаб Визард" style="border-bottom: 1px solid #ddd;">
                 <h2 style="margin-top:0">Воркшоптаб Визард</h2>
                 <p style="margin-top:0">проводит проверку грузовых машин с помощью цифрового тахографа и блютус-передатчика СмартЛинк.</p>
-            </a>
+            </a -->
             <div class="row">
-                <div class="col-1of3">
+                <!--div class="col-1of3">
                     <a href="dtco-configurator.html" class="project-link">
                         <img src="img/dtco-conf/teaser-dtco.png" style="border-bottom: 1px solid #ddd;">
                         <h3 style="margin-top:0;">Конфигуратор тахографов</h3>
@@ -69,7 +68,14 @@
                         <img src="img/safe/teaser-safe.png">
                         <h3>С-Е-Й-Ф</h3>
                     </a>
+                </div-->
+                <div class="col-1of3">
+                    <a href="http://seigiard.com/bureau-school-rating/" class="project-link">
+                        <img src="img/bureau-school-rating/teaser-rating.png" alt="Знакомер">
+                        <h3>Рейтинг студентов школы бюро 2017</h3>
+                    </a>
                 </div>
+                </div-->
                 <div class="col-1of3">
                     <a href="http://seigiard.com/znkmtr/" class="project-link">
                         <img src="img/znkmr/znkmr-teaser.png" alt="Знакомер">
@@ -84,48 +90,55 @@
                     <h3>Глава отдела фронтенд разработки, Cloud&nbsp;Consulting&nbsp;AS
                     <br /><small>2015—2017</small></h3>
                 </header>
-                <p><strong>WorkshopTab Wizard Interface Builder;</strong> Invented and made app
-                that makes HTML prototypes of screens of real JAVA application
-                and generates FXML-layouts. It helps developer team to communicate
-                with managers and works faster.</p>
-                <p><strong>DTCO Configurator;</strong> Made and prototyped UI of application that helps
-                configure digital tachographs.</p>
-                <p><strong>NCF Event Calendar;</strong> Renovate UI system of web-app, built frontend
-                part of service.</p>
+                <p><strong>Конфигуратор визардов для ВоркшопТаба;</strong>
+                    Придумал и сделал приложение прототипирования на HTML экранов
+                    реального JAVA-приложения и генеририрования FXML-макетов.
+                    Это помогает команде разработчиков общаться с менеджерами и работать быстрее.
+                </p>
+                <p><strong>Конфигуратор DTCO;</strong>
+                    Разработал и нарисовал пользовательский интерфейс приложения,
+                    который помогает настраивать цифровые тахографы.
+                </p>
+                <p><strong>Календарь событий NCF;</strong>
+                    Обновил UI-систему календаря спортивных событий, разработал фронтенд-часть сервиса.
+                </p>
             </section>
             <section>
                 <header>
                     <h3>Главный фронтенд разработчик, Cloud&nbsp;Consulting&nbsp;AS
                     <br /><small>2013—2015</small></h3>
                 </header>
-                <p><strong>Fartskriver SAFE APP;</strong> Made UI of mobile app, developed mobile app,
-                developed frontend web-app.</p>
-                <p>Made number of applications/prototypes/mockups based
-                on JS frameworks or pure HTML+CSS+JS with backend on Ruby / Java.</p>
+                <p><strong>Fartskriver SAFE APP;</strong>
+                    Разработал пользовательский интерфейс мобильного приложения,
+                    создал мобильное и веб-приложение сервиса.</p>
+                <p>Сделал несколько приложений / прототипов / макетов
+                    на основе JS-фреймворков или чистого HTML + CSS + JS
+                    с бэкэндом на Ruby / Java.</p>
             </section>
             <section>
                 <header>
                     <h3>Фронтенд разработчик / Дизайнер интерфейсов, Razzom.Com
                     <br /><small>2012—2013</small></h3>
                 </header>
-                <p>Made frontend part of service, analyzed and improved UI solutions.</p>
+                <p>Верстал, анализировал и улучшал юзабилити пользовательской части сервиса.</p>
             </section>
             <section>
                 <header>
                     <h3>Веб-разработчик, Artais&nbsp;Web&nbsp;Studio
                     <br /><small>2008—2013</small></h3>
                 </header>
-                <p>Developing the web-framework for typical sites based on inner
-                        company’s CMS.</p>
-                <p>Made up over 50 sites using HTML5, CSS3 and JS.</p>
+                <p>Разработал систему правил и библиотеку элементов для типовых сайтов компании.</p>
+                <p>Сверстал более 50 сайтов, используя HTML5, CSS3 и JS.</p>
             </section>
             <section>
                 <header>
                     <h3>Фронтенд разработчик / Дизайнер интерфейсов, Фриланс
                     <br /><small>2005—2013</small></h3>
                 </header>
-                <p>Developed more than hundred sites using HTML, CSS and JS.</p>
-                <p>Had a few UI projects and a dozen of PHP projects</p>
+
+                <p>Я разработал более ста сайтов на HTML, CSS и JS.</p>
+                <p>Создал интерфейсы для нескольких проектов.</p>
+                <p>Написал дюжину проектов на PHP.</p>
             </section>
 
             <h2>Образование</h2>
