--- a/resume.html
+++ b/resume.html
@@ -47,7 +47,7 @@
 
             <p>Знаю OOP, FRP, Angular, React, Vue, Flux, Redux и прочие модные слова на острие технологий. Интересуюсь новинками веба и стараюсь их пощупать.</p>
 
-            <p>Связаться со мной можно по почте <a href="mailto:seigiard@gmail.com">seigiard@gmail.com</a>.</p>
+            <p>Почта: <a href="mailto:seigiard@gmail.com">seigiard@gmail.com</a>.</p>
 
             <h2>Я сделал</h2>
             <!-- a href="workshoptab-wizard.html" class="project-link">
