--- a/portfolio.html
+++ b/portfolio.html
@@ -41,36 +41,38 @@
 
 
         <h2>Я сделал</h2>
-        <!-- a href="workshoptab-wizard.html" class="project-link">
-
-            <img src="img/workshoptab-wizard/teaser.jpg" alt="Вокршоптаб Визард" style="border-bottom: 1px solid #ddd;">
-            <h2 style="margin-top:0">Воркшоптаб Визард</h2>
-            <p style="margin-top:0">проводит проверку грузовых машин с помощью цифрового тахографа и блютус-передатчика СмартЛинк.</p>
-        </a -->
-        <div class="row">
-            <!--div class="col-1of3">
-                <a href="dtco-configurator.html" class="project-link">
-                    <img src="img/dtco-conf/teaser-dtco.png" style="border-bottom: 1px solid #ddd;">
-                    <h3 style="margin-top:0;">Конфигуратор тахографов</h3>
+        <div class="row row-single">
+            <div class="col-4of5">
+                <a href="workshoptab-wizard.html" class="project-link">
+                    <img src="img/workshoptab-wizard/teaser.jpg" alt="Вокршоптаб Визард" style="border-bottom: 1px solid #ddd;">
+                    <h2 style="margin-top:0">Воркшоптаб Визард</h2>
+                    <p style="margin-top:0">проводит проверку грузовых машин с помощью цифрового тахографа и блютус-передатчика СмартЛинк.</p>
                 </a>
+                <div class="row">
+                    <div class="col-1of3">
+                        <a href="dtco-configurator.html" class="project-link">
+                            <img src="img/dtco-conf/teaser-dtco.png" style="border-bottom: 1px solid #ddd;">
+                            <h3 style="margin-top:0;">Конфигуратор тахографов</h3>
+                        </a>
+                    </div>
+                    <div class="col-1of3">
+                        <a href="safe-app.html" class="project-link">
+                            <img src="img/safe/teaser-safe.png">
+                            <h3>С-Е-Й-Ф</h3>
+                        </a>
+                    </div>
+                    <div class="col-1of3">
+                        <a href="http://seigiard.com/znkmtr/" class="project-link">
+                            <img src="img/znkmr/znkmr-teaser.png" alt="Знакомер">
+                            <h3>Знакомер</h3>
+                        </a>
+                    </div>
+                </div>
             </div>
-            <div class="col-1of3">
-                <a href="safe-app.html" class="project-link">
-                    <img src="img/safe/teaser-safe.png">
-                    <h3>С-Е-Й-Ф</h3>
-                </a>
-            </div-->
-            <div class="col-1of3">
+            <div class="col-1of5">
                 <a href="http://seigiard.com/bureau-school-rating/" class="project-link">
-                    <img src="img/bureau-school-rating/teaser-rating.png" alt="Знакомер">
                     <h3>Рейтинг студентов школы бюро 2017</h3>
-                </a>
-            </div>
-            </div-->
-            <div class="col-1of3">
-                <a href="http://seigiard.com/znkmtr/" class="project-link">
-                    <img src="img/znkmr/znkmr-teaser.png" alt="Знакомер">
-                    <h3>Знакомер</h3>
+                    <div class="rating-image" style="border-bottom: 1px solid #ddd;" title="Рейтинг студентов школы бюро 2017"></div>
                 </a>
             </div>
         </div>
