--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Андрей Борисенко, веб-разработчик</title>
-        <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico in the root directory -->
@@ -19,6 +18,15 @@
 
         <link rel="stylesheet" href="css/typography.css">
         <link rel="stylesheet" href="css/main.css">
+
+        <style>
+            section + section {
+                margin-top: 2rem;
+            }
+            section h3 small {
+                font-size: 75%;
+            }
+        </style>
     </head>
     <body>
         <!--[if lt IE 8]>
@@ -31,48 +39,131 @@
             <h1>Андрей Борисенко</h1>
         </header>
 
-        <p>Верстать начал в 1998 году, с 2003 года работаю во фронтенде. Разрабатываю сайты и приложения на JS. Умею сделать так, чтобы сайт работал на ИЕ8, если это нужно.</p>
+        <main>
 
-        <p>Моё увлечение — дизайн, интерфейсы и взаимодействие с пользователями. Делаю каждый проект с оглядкой на удобство пользователя.</p>
+            <p>Верстать начал в 1998 году, с 2003 года работаю во фронтенде. Разрабатываю сайты и приложения на JS. Умею сделать так, чтобы сайт работал на ИЕ8, если это нужно.</p>
 
-        <p>Знаю OOP, FRP, Angular, React, Vue, Flux, Redux и прочие модные слова на острие технологий. Интересуюсь новинками веба и стараюсь их пощупать.</p>
+            <p>Моё увлечение — дизайн, интерфейсы и взаимодействие с пользователями. Делаю каждый проект с оглядкой на удобство пользователя.</p>
 
-        <p>Почта: <a href="mailto:seigiard@gmail.com">seigiard@gmail.com</a>.</p>
+            <p>Знаю OOP, FRP, Angular, React, Vue, Flux, Redux и прочие модные слова на острие технологий. Интересуюсь новинками веба и стараюсь их пощупать.</p>
 
+            <p>Почта: <a href="mailto:seigiard@gmail.com">seigiard@gmail.com</a>.</p>
 
-        <h2>Я сделал</h2>
-        <!-- a href="workshoptab-wizard.html" class="project-link">
-
-            <img src="img/workshoptab-wizard/teaser.jpg" alt="Вокршоптаб Визард" style="border-bottom: 1px solid #ddd;">
-            <h2 style="margin-top:0">Воркшоптаб Визард</h2>
-            <p style="margin-top:0">проводит проверку грузовых машин с помощью цифрового тахографа и блютус-передатчика СмартЛинк.</p>
-        </a -->
-        <div class="row">
-            <!--div class="col-1of3">
-                <a href="dtco-configurator.html" class="project-link">
-                    <img src="img/dtco-conf/teaser-dtco.png" style="border-bottom: 1px solid #ddd;">
-                    <h3 style="margin-top:0;">Конфигуратор тахографов</h3>
-                </a>
+            <h2>Я сделал</h2>
+            <div class="row row-single">
+                <div class="col-4of5">
+                    <a href="workshoptab-wizard.html" class="project-link">
+                        <img src="img/workshoptab-wizard/teaser.jpg" alt="Вокршоптаб Визард" style="border-bottom: 1px solid #ddd;">
+                        <h2 style="margin-top:0">Воркшоптаб Визард</h2>
+                        <p style="margin-top:0">проводит проверку грузовых машин с помощью цифрового тахографа и блютус-передатчика СмартЛинк.</p>
+                    </a>
+                    <div class="row">
+                        <div class="col-1of3">
+                            <a href="dtco-configurator.html" class="project-link">
+                                <img src="img/dtco-conf/teaser-dtco.png" style="border-bottom: 1px solid #ddd;">
+                                <h3 style="margin-top:0;">Конфигуратор тахографов</h3>
+                            </a>
+                        </div>
+                        <div class="col-1of3">
+                            <a href="safe-app.html" class="project-link">
+                                <img src="img/safe/teaser-safe.png">
+                                <h3>С-Е-Й-Ф</h3>
+                            </a>
+                        </div>
+                        <div class="col-1of3">
+                            <a href="http://seigiard.com/znkmtr/" class="project-link">
+                                <img src="img/znkmr/znkmr-teaser.png" alt="Знакомер">
+                                <h3>Знакомер</h3>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1of5">
+                    <a href="http://seigiard.com/bureau-school-rating/" class="project-link">
+                        <h3>Рейтинг студентов школы бюро 2017</h3>
+                        <div class="rating-image" style="border-bottom: 1px solid #ddd;" title="Рейтинг студентов школы бюро 2017"></div>
+                    </a>
+                </div>
             </div>
-            <div class="col-1of3">
-                <a href="safe-app.html" class="project-link">
-                    <img src="img/safe/teaser-safe.png">
-                    <h3>С-Е-Й-Ф</h3>
-                </a>
-            </div-->
-            <div class="col-1of3">
-                <a href="http://seigiard.com/bureau-school-rating/" class="project-link">
-                    <img src="img/bureau-school-rating/teaser-rating.png" alt="Знакомер">
-                    <h3>Рейтинг студентов школы бюро 2017</h3>
-                </a>
-            </div>
-            </div-->
-            <div class="col-1of3">
-                <a href="http://seigiard.com/znkmtr/" class="project-link">
-                    <img src="img/znkmr/znkmr-teaser.png" alt="Знакомер">
-                    <h3>Знакомер</h3>
-                </a>
-            </div>
-        </div>
+
+            <h2>Работа</h2>
+            <section>
+                <header>
+                    <h3>Фронтенд-инженер, Moovweb
+                    <br /><small>2017—настоящее время</small></h3>
+                </header>
+            </section>
+            <section>
+                <header>
+                    <h3>Глава отдела фронтенд разработки, Cloud&nbsp;Consulting&nbsp;AS
+                    <br /><small>2015—2017</small></h3>
+                </header>
+                <p><strong>Конфигуратор визардов для ВоркшопТаба;</strong>
+                    Придумал и сделал приложение прототипирования на HTML экранов
+                    реального JAVA-приложения и генеририрования FXML-макетов.
+                    Это помогает команде разработчиков общаться с менеджерами и работать быстрее.
+                </p>
+                <p><strong>Конфигуратор DTCO;</strong>
+                    Разработал и нарисовал пользовательский интерфейс приложения,
+                    который помогает настраивать цифровые тахографы.
+                </p>
+                <p><strong>Календарь событий NCF;</strong>
+                    Обновил UI-систему календаря спортивных событий, разработал фронтенд-часть сервиса.
+                </p>
+            </section>
+            <section>
+                <header>
+                    <h3>Главный фронтенд разработчик, Cloud&nbsp;Consulting&nbsp;AS
+                    <br /><small>2013—2015</small></h3>
+                </header>
+                <p><strong>Fartskriver SAFE APP;</strong>
+                    Разработал пользовательский интерфейс мобильного приложения,
+                    создал мобильное и веб-приложение сервиса.</p>
+                <p>Сделал несколько приложений / прототипов / макетов
+                    на основе JS-фреймворков или чистого HTML + CSS + JS
+                    с бэкэндом на Ruby / Java.</p>
+            </section>
+            <section>
+                <header>
+                    <h3>Фронтенд разработчик / Дизайнер интерфейсов, Razzom.Com
+                    <br /><small>2012—2013</small></h3>
+                </header>
+                <p>Верстал, анализировал и улучшал юзабилити пользовательской части сервиса.</p>
+            </section>
+            <section>
+                <header>
+                    <h3>Веб-разработчик, Artais&nbsp;Web&nbsp;Studio
+                    <br /><small>2008—2013</small></h3>
+                </header>
+                <p>Разработал систему правил и библиотеку элементов для типовых сайтов компании.</p>
+                <p>Сверстал более 50 сайтов, используя HTML5, CSS3 и JS.</p>
+            </section>
+            <section>
+                <header>
+                    <h3>Фронтенд разработчик / Дизайнер интерфейсов, Фриланс
+                    <br /><small>2005—2013</small></h3>
+                </header>
+
+                <p>Я разработал более ста сайтов на HTML, CSS и JS.</p>
+                <p>Создал интерфейсы для нескольких проектов.</p>
+                <p>Написал дюжину проектов на PHP.</p>
+            </section>
+
+            <h2>Образование</h2>
+            <section>
+                <header>
+                    <h3>Белорусский Национальный Технический Институт
+                    <br /><small>2001—2004</small></h3>
+                </header>
+                <p>Факультет информационный технологий</p>
+            </section>
+            <section>
+                <header>
+                    <h3>Белорусский Государственный Университет
+                    <br /><small>1999—2000</small></h3>
+                </header>
+                <p>Факультет прикладной математики и информатики</p>
+            </section>
+        </main>
     </body>
 </html>
