--- a/index.html
+++ b/index.html
@@ -29,13 +29,8 @@
         </style>
     </head>
     <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <!-- Add your site or application content here -->
         <header class="mainpage-header">
-            <div class="mainpage-header__avatar"><img src="img/avatar-circle.jpg" alt="Андрей Борисенко" /></div>
+            <div class="mainpage-header__avatar"><img src="img/avatar.jpg" alt="Андрей Борисенко" /></div>
             <h1>Андрей Борисенко</h1>
         </header>
 
@@ -89,7 +84,7 @@
             <h2>Работа</h2>
             <section>
                 <header>
-                    <h3>Фронтенд-инженер, Moovweb
+                    <h3>Engineering Manager, Moovweb
                     <br /><small>2017—настоящее время</small></h3>
                 </header>
             </section>
