--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="ru">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Андрей Борисенко, веб-разработчик</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="Разрабатываю сайты и приложения на JS. Умею сделать так, чтобы сайт работал на ИЕ8, если это нужно.">
 
         <!-- Place favicon.ico in the root directory -->
         <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
@@ -55,19 +56,19 @@
                     <div class="row">
                         <div class="col-1of3">
                             <a href="dtco-configurator.html" class="project-link">
-                                <img src="img/dtco-conf/teaser-dtco.png" style="border-bottom: 1px solid #ddd;">
+                                <img src="img/dtco-conf/teaser-dtco.png" alt="Конфигуратор тахографов" style="border-bottom: 1px solid #ddd;" />
                                 <h3 style="margin-top:0;">Конфигуратор тахографов</h3>
                             </a>
                         </div>
                         <div class="col-1of3">
                             <a href="safe-app.html" class="project-link">
-                                <img src="img/safe/teaser-safe.png">
+                                <img src="img/safe/teaser-safe.png" alt="С-Е-Й-Ф"/>
                                 <h3>С-Е-Й-Ф</h3>
                             </a>
                         </div>
                         <div class="col-1of3">
                             <a href="http://seigiard.com/znkmtr/" class="project-link">
-                                <img src="img/znkmr/znkmr-teaser.png" alt="Знакомер">
+                                <img src="img/znkmr/znkmr-teaser.png" alt="Знакомер" />
                                 <h3>Знакомер</h3>
                             </a>
                         </div>
