--- a/en.html
+++ b/en.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Andrew Borisenko, Web Developer</title>
-        <meta name="description" content="">
+        <meta name="description" content="Results-oriented professional with more than fifteen years experience in web development.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico in the root directory -->
