--- a/safe-app.html
+++ b/safe-app.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Андрей Борисенко, веб-разработчик</title>
-        <meta name="description" content="">
+        <meta name="description" content="Приложение С-Е-Й-Ф заменяет бумажные формы проверки автомобиля, контролирует покупку бензина и ГСМ, помогает водителям оформить ДТП или несчастный случай для уведомления работодателя.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico in the root directory -->
