--- a/dtco-configurator.html
+++ b/dtco-configurator.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Андрей Борисенко, веб-разработчик</title>
-        <meta name="description" content="">
+        <meta name="description" content="Конфигуратор (DTCO Configuration App) упрощает настройку цифровых тахографов. Менеджер подключает к тахографу беспроводной передатчик Смартлинк, выбирает тахограф и настраивает его с телефона.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico in the root directory -->
