--- a/workshoptab-wizard.html
+++ b/workshoptab-wizard.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Андрей Борисенко, веб-разработчик</title>
-        <meta name="description" content="">
+        <meta name="description" content="Вокршоптаб Визард (WorkshopTab Wizard) проводит проверку грузовых машин с помощью цифрового тахографа и блютус-передатчика СмартЛинк.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <!-- Place favicon.ico in the root directory -->
@@ -30,32 +30,29 @@
             <nav><a href="index.html">Андрей Борисенко</a></nav>
             <h1>Воркшоптаб Визард</h1>
         </header>
+        <p><img src="img/workshoptab-wizard/workshoptab.jpg" alt="Планшет Воркшоптаб" /></p>
+        <p>Вокршоптаб Визард (WorkshopTab Wizard) проводит проверку грузовых машин с&nbsp;помощью цифрового тахографа и&nbsp;блютус-передатчика СмартЛинк.</p>
 
-        <img src="img/workshoptab-wizard/workshoptab.jpg" alt="Планшет Воркшоптаб" />
+        <p>C&nbsp;интерфейсом визарда удобно работать механику в&nbsp;гараже. Крупный шрифт и&nbsp;элементы интерфейса чётко различимы при недостаточной освещённости и&nbsp;удобны для попадания пальцами.</p>
 
-        <p>Вокршоптаб Визард (WorkshopTab Wizard) проводит проверку грузовых машин с помощью цифрового тахографа и блютус-передатчика СмартЛинк.</p>
-
-        <p>C интерфейсом визарда удобно работать механику в гараже. Крупный шрифт и элементы интерфейса чётко различимы при недостаточной освещённости и удобны для попадания пальцами.</p>
-
-        <p>Разработанная система интерфейса Визарда помогает унифицировать внешний вид экранов и упростить внесение визуальных изменений в проект без привлечения разработчиков.</p>
+        <p>Разработанная система интерфейса Визарда помогает унифицировать внешний вид экранов и&nbsp;упростить внесение визуальных изменений в&nbsp;проект без привлечения разработчиков.</p>
 
         <img src="img/workshoptab-wizard/wizard-view.png" alt="Вид интерфейса" />
 
-        <p>Генератор страниц форм Визарда позволяет менеджерам быстро создавать прототипы страниц и согласовывать их с клиентами.</p>
-
+        <p>Генератор страниц форм Визарда позволяет менеджерам быстро создавать прототипы страниц и&nbsp;согласовывать их&nbsp;с&nbsp;клиентами.</p>
         <img src="img/workshoptab-wizard/code-to-wizard.png" alt="JSON-структура превращается в интерактивный прототип" />
 
-        <p>Экспортёр fxml-лэйаутов из генератора облегчает жизнь разработчикам. Они могут скачать нужный экран и работать над кодом приложения, а не вёрсткой.</p>
+        <p>Экспортёр fxml-лэйаутов из&nbsp;генератора облегчает жизнь разработчикам. Они могут скачать нужный экран и&nbsp;работать над кодом приложения, а&nbsp;не&nbsp;вёрсткой.</p>
 
         <img src="img/workshoptab-wizard/wizard-to-fxml.png" alt="Экспорт страниц прототипа в fxml-лэйауты" style="width:75%;" />
 
-        <p>Библиотека элементов и код-стайл помогают разработчикам писать код легко.</p>
+        <p>Библиотека элементов и&nbsp;код-стайл помогают разработчикам писать код легко.</p>
 
         <img src="img/workshoptab-wizard/ui-layout-rules.png" alt="Библиотека элементов" />
 
         <h3>Мой вклад</h3>
 
-        <p>Визуальный стиль системы, набор шаблонов и стилей в FXML, создание генератора прототипов, создание экспортёра прототипа в FXML-файл.</p>
+        <p>Визуальный стиль системы, набор шаблонов и&nbsp;стилей в&nbsp;FXML, создание генератора прототипов, создание экспортёра прототипа в&nbsp;FXML-файл.</p>
 
     </body>
 </html>
