Update main page

--- a/index.html
+++ b/index.html
@@ -36,12 +36,13 @@
         </header>
 
         <main>
-
             <p>Верстать начал в 1998 году, с 2003 года работаю во фронтенде. Разрабатываю сайты и приложения на JS. Умею сделать так, чтобы сайт работал на ИЕ8, если это нужно.</p>
 
-            <p>Моё увлечение — дизайн, интерфейсы и взаимодействие с пользователями. Делаю каждый проект с оглядкой на удобство пользователя.</p>
+            <p>Сейчас создаю сверхскоростные веб-приложения/сайты на React.</p>
 
-            <p>Знаю OOP, FRP, Angular, React, Vue, Flux, Redux и прочие модные слова на острие технологий. Интересуюсь новинками веба и стараюсь их пощупать.</p>
+            <p>Моё увлечение — дизайн, интерфейсы и взаимодействие с пользователями.</p>
+
+            <p>Знаю OOP, FRP, React, Vue, Angular, Flux, Redux, Mobx и прочие модные слова на острие технологий. Интересуюсь новинками веба и стараюсь их пощупать.</p>
 
             <p>Почта: <a href="mailto:seigiard@gmail.com">seigiard@gmail.com</a>.</p>
 
@@ -86,8 +87,17 @@
             <section>
                 <header>
                     <h3>Engineering Manager, Moovweb
-                    <br /><small>2017—настоящее время</small></h3>
+                    <br /><small>2018—настоящее время</small></h3>
                 </header>
+                <p>Создаю невероятно быстрые сайты. Веду проекты. Управляю людьми.</p>
+            </section>
+            <h2>Работа</h2>
+            <section>
+                <header>
+                    <h3>Frontend Developer, MoovCheckout
+                    <br /><small>2017—2018</small></h3>
+                </header>
+                <p>Оптимизировал процесс оплаты с помощью know-how компании для&nbsp;сайтов нескольких клиентов, что привело к повышению конверсии и дохода.</p>
             </section>
             <section>
                 <header>
