--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <title>Андрей Борисенко, веб-разработчик</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Разрабатываю сайты и приложения на JS. Умею сделать так, чтобы сайт работал на ИЕ8, если это нужно.">
+        <meta name="description" content="Разрабатываю сайты и приложения на JS. Умею сделать так, чтобы сайт работал на ИЕ8, если этонужно.">
 
         <!-- Place favicon.ico in the root directory -->
         <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
@@ -36,13 +36,13 @@
         </header>
 
         <main>
-            <p>Верстать начал в 1998 году, с 2003 года работаю во фронтенде. Разрабатываю сайты и приложения на JS. Умею сделать так, чтобы сайт работал на ИЕ8, если это нужно.</p>
+            <p>Верстать начал в&nbsp;1998 году, с&nbsp;2003 года работаю во&nbsp;фронтенде. Разрабатываю сайты и&nbsp;приложения на&nbsp;JS. Умею сделать так, чтобы сайт работал на&nbsp;ИЕ8, если&nbsp;это&nbsp;нужно.</p>
 
-            <p>Сейчас создаю сверхскоростные веб-приложения/сайты на React.</p>
+            <p>Сейчас создаю сверхскоростные веб-приложения/сайты на&nbsp;React.</p>
 
-            <p>Моё увлечение — дизайн, интерфейсы и взаимодействие с пользователями.</p>
+            <p>Моё увлечение —&nbsp;дизайн, интерфейсы и&nbsp;взаимодействие с&nbsp;пользователями.</p>
 
-            <p>Знаю OOP, FRP, React, Vue, Angular, Flux, Redux, Mobx и прочие модные слова на острие технологий. Интересуюсь новинками веба и стараюсь их пощупать.</p>
+            <p>Знаю OOP, FRP, React, Vue, Angular, Flux, Redux, Mobx и&nbsp;прочие модные слова на&nbsp;острие технологий. Интересуюсь новинками веба и&nbsp;стараюсь их&nbsp;пощупать.</p>
 
             <p>Почта: <a href="mailto:seigiard@gmail.com">seigiard@gmail.com</a>.</p>
 
@@ -52,7 +52,7 @@
                     <a href="workshoptab-wizard.html" class="project-link">
                         <img src="img/workshoptab-wizard/teaser.jpg" alt="Вокршоптаб Визард" style="border-bottom: 1px solid #ddd;">
                         <h2 style="margin-top:0">Воркшоптаб Визард</h2>
-                        <p style="margin-top:0">проводит проверку грузовых машин с помощью цифрового тахографа и блютус-передатчика СмартЛинк.</p>
+                        <p style="margin-top:0">проводит проверку грузовых машин с&nbsp;помощью цифрового тахографа и&nbsp;блютус-передатчика СмартЛинк.</p>
                     </a>
                     <div class="row">
                         <div class="col-1of3">
@@ -97,7 +97,7 @@
                     <h3>Frontend Developer, MoovCheckout
                     <br /><small>2017—2018</small></h3>
                 </header>
-                <p>Оптимизировал процесс оплаты с помощью know-how компании для&nbsp;сайтов нескольких клиентов, что привело к повышению конверсии и дохода.</p>
+                <p>Оптимизировал процесс оплаты на&nbsp;сайтах клиентов с&nbsp;помощью know-how компании.</p>
             </section>
             <section>
                 <header>
@@ -105,12 +105,12 @@
                     <br /><small>2015—2017</small></h3>
                 </header>
                 <p><strong>Конфигуратор визардов для ВоркшопТаба;</strong>
-                    Придумал и сделал приложение прототипирования на HTML экранов
-                    реального JAVA-приложения и генеририрования FXML-макетов.
-                    Это помогает команде разработчиков общаться с менеджерами и работать быстрее.
+                    Придумал и&nbsp;сделал приложение прототипирования на&nbsp;HTML
+                    экранов&nbsp;реального JAVA-приложения и&nbsp;генеририрования FXML-макетов.
+                    Это помогает команде разработчиков общаться с&nbsp;менеджерами и&nbsp;работать быстрее.
                 </p>
                 <p><strong>Конфигуратор DTCO;</strong>
-                    Разработал и нарисовал пользовательский интерфейс приложения,
+                    Разработал и&nbsp;нарисовал пользовательский интерфейс приложения,
                     который помогает настраивать цифровые тахографы.
                 </p>
                 <p><strong>Календарь событий NCF;</strong>
@@ -124,25 +124,25 @@
                 </header>
                 <p><strong>Fartskriver SAFE APP;</strong>
                     Разработал пользовательский интерфейс мобильного приложения,
-                    создал мобильное и веб-приложение сервиса.</p>
-                <p>Сделал несколько приложений / прототипов / макетов
-                    на основе JS-фреймворков или чистого HTML + CSS + JS
-                    с бэкэндом на Ruby / Java.</p>
+                    создал мобильное и&nbsp;веб-приложение сервиса.</p>
+                <p>Сделал несколько приложений&nbsp;/&nbsp;прототипов&nbsp;/&nbsp;макетов
+                    на&nbsp;основе JS-фреймворков или&nbsp;чистого HTML&nbsp;+&nbsp;CSS&nbsp;+&nbsp;JS
+                    с&nbsp;бэкэндом на&nbsp;Ruby&nbsp;/&nbsp;Java.</p>
             </section>
             <section>
                 <header>
                     <h3>Фронтенд разработчик / Дизайнер интерфейсов, Razzom.Com
                     <br /><small>2012—2013</small></h3>
                 </header>
-                <p>Верстал, анализировал и улучшал юзабилити пользовательской части сервиса.</p>
+                <p>Верстал, анализировал и&nbsp;улучшал юзабилити пользовательской части сервиса.</p>
             </section>
             <section>
                 <header>
                     <h3>Веб-разработчик, Artais&nbsp;Web&nbsp;Studio
                     <br /><small>2008—2013</small></h3>
                 </header>
-                <p>Разработал систему правил и библиотеку элементов для типовых сайтов компании.</p>
-                <p>Сверстал более 50 сайтов, используя HTML5, CSS3 и JS.</p>
+                <p>Разработал систему правил и&nbsp;библиотеку элементов для&nbsp;типовых сайтов компании.</p>
+                <p>Сверстал более 50 сайтов, используя HTML5,&nbsp;CSS3 и&nbsp;JS.</p>
             </section>
             <section>
                 <header>
@@ -150,9 +150,9 @@
                     <br /><small>2005—2013</small></h3>
                 </header>
 
-                <p>Я разработал более ста сайтов на HTML, CSS и JS.</p>
-                <p>Создал интерфейсы для нескольких проектов.</p>
-                <p>Написал дюжину проектов на PHP.</p>
+                <p>Я&nbsp;разработал более ста сайтов на&nbsp;HTML, CSS и&nbsp;JS.</p>
+                <p>Создал интерфейсы для&nbsp;нескольких проектов.</p>
+                <p>Написал дюжину проектов на&nbsp;PHP.</p>
             </section>
 
             <h2>Образование</h2>
@@ -168,7 +168,7 @@
                     <h3>Белорусский Государственный Университет
                     <br /><small>1999—2000</small></h3>
                 </header>
-                <p>Факультет прикладной математики и информатики</p>
+                <p>Факультет прикладной математики и&nbsp;информатики</p>
             </section>
         </main>
     </body>
