--- a/en.html
+++ b/en.html
@@ -6,6 +6,7 @@
         <title>Andrew Borisenko, Web Developer</title>
         <meta name="description" content="Results-oriented professional with more than fifteen years experience in web development.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="alternate" hreflang="ru" href="index.html" />
 
         <!-- Place favicon.ico in the root directory -->
         <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
