--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <title>Андрей Борисенко, веб-разработчик</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Разрабатываю сайты и приложения на JS. Умею сделать так, чтобы сайт работал на ИЕ8, если этонужно.">
+        <link rel="alternate" hreflang="en" href="en.html" />
 
         <!-- Place favicon.ico in the root directory -->
         <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
