--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         </header>
 
         <main>
-            <p>Верстать начал в&nbsp;1998 году, с&nbsp;2003 года работаю во&nbsp;фронтенде. Разрабатываю сайты и&nbsp;приложения на&nbsp;JS. Умею сделать так, чтобы сайт работал на&nbsp;ИЕ8, если&nbsp;это&nbsp;нужно.</p>
+            <p>Верстать начал в&nbsp;1998 году, с&nbsp;2003 года работаю во&nbsp;фронтенде. Разрабатываю сайты и&nbsp;приложения на&nbsp;JS. Умею сделать так, чтобы&nbsp;сайт работал на&nbsp;ИЕ8, если&nbsp;это&nbsp;нужно.</p>
 
             <p>Сейчас создаю сверхскоростные веб-приложения/сайты на&nbsp;React.</p>
 
