--- a/index.html
+++ b/index.html
@@ -39,65 +39,48 @@
         <main>
             <p>Верстать начал в&nbsp;1998 году, с&nbsp;2003 года работаю во&nbsp;фронтенде. Разрабатываю сайты и&nbsp;приложения на&nbsp;JS. Умею сделать так, чтобы&nbsp;сайт работал на&nbsp;ИЕ8, если&nbsp;это&nbsp;нужно.</p>
 
-            <p>Сейчас создаю сверхскоростные веб-приложения/сайты на&nbsp;React.</p>
+            <p>Сейчас управляю проектами и оптимизирую веб-приложения/сайты на&nbsp;React.</p>
 
             <p>Моё увлечение —&nbsp;дизайн, интерфейсы и&nbsp;взаимодействие с&nbsp;пользователями.</p>
 
-            <p>Знаю OOP, FRP, React, Vue, Angular, Flux, Redux, Mobx и&nbsp;прочие модные слова на&nbsp;острие технологий. Интересуюсь новинками веба и&nbsp;стараюсь их&nbsp;пощупать.</p>
+            <p>Знаю OOP, FRP, React, Vue, Angular, Flux, Redux, Mobx, Scrum, Kanban и&nbsp;прочие модные слова на&nbsp;острие технологий. Интересуюсь новинками веба и&nbsp;стараюсь их&nbsp;пощупать.</p>
 
             <p>Почта: <a href="mailto:seigiard@gmail.com">seigiard@gmail.com</a>.</p>
-
-            <h2>Я сделал</h2>
-            <div class="row row-single">
-                <div class="col-4of5">
-                    <a href="workshoptab-wizard.html" class="project-link">
-                        <img src="img/workshoptab-wizard/teaser.jpg" alt="Вокршоптаб Визард" style="border-bottom: 1px solid #ddd;">
-                        <h2 style="margin-top:0">Воркшоптаб Визард</h2>
-                        <p style="margin-top:0">проводит проверку грузовых машин с&nbsp;помощью цифрового тахографа и&nbsp;блютус-передатчика СмартЛинк.</p>
-                    </a>
-                    <div class="row">
-                        <div class="col-1of3">
-                            <a href="dtco-configurator.html" class="project-link">
-                                <img src="img/dtco-conf/teaser-dtco.png" alt="Конфигуратор тахографов" style="border-bottom: 1px solid #ddd;" />
-                                <h3 style="margin-top:0;">Конфигуратор тахографов</h3>
-                            </a>
-                        </div>
-                        <div class="col-1of3">
-                            <a href="safe-app.html" class="project-link">
-                                <img src="img/safe/teaser-safe.png" alt="С-Е-Й-Ф"/>
-                                <h3>С-Е-Й-Ф</h3>
-                            </a>
-                        </div>
-                        <div class="col-1of3">
-                            <a href="http://seigiard.com/znkmtr/" class="project-link">
-                                <img src="img/znkmr/znkmr-teaser.png" alt="Знакомер" />
-                                <h3>Знакомер</h3>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-1of5">
-                    <a href="http://seigiard.com/bureau-school-rating/" class="project-link">
-                        <h3>Рейтинг студентов школы бюро 2017</h3>
-                        <div class="rating-image" style="border-bottom: 1px solid #ddd;" title="Рейтинг студентов школы бюро 2017"></div>
-                    </a>
-                </div>
-            </div>
 
             <h2>Работа</h2>
             <section>
                 <header>
-                    <h3>Engineering Manager, Moovweb
-                    <br /><small>2018—настоящее время</small></h3>
+                    <h3>Senior Software Engineering Manager and Architect, Moovweb&nbsp;→&nbsp;MoovForge
+                    <br /><small>2019—настоящее время</small></h3>
                 </header>
-                <p>Создаю невероятно быстрые сайты. Веду проекты. Управляю людьми.</p>
+                <p>Управляю&nbsp;проектами. Беседую с&nbsp;клиентами. Управляю&nbsp;людьми. Пишу&nbsp;код.</p>
+                <p><strong>Достижения:</strong></p>
+                <ul>
+                    <li>Провёл миграцию существующего проекта на&nbsp;сборку и&nbsp;деплой на&nbsp;layer0.co. В&nbsp;итоге клиент мог в&nbsp;один клик переключаться с&nbsp;layer0.co на&nbsp;свою инфраструктуру и&nbsp;обратно;</li>
+                    <li>С&nbsp;командой оптимизировал сайт клиента на&nbsp;React и&nbsp;Typescript, чтобы 80%&nbsp;страниц были зелеными в&nbsp;Core&nbsp;Web&nbsp;Vitals;</li>
+                </ul>
+            </section>
+            <section>
+                <header>
+                    <h3>Frontend Engineer / Team Lead, Moovweb
+                    <br /><small>2018—2019</small></h3>
+                </header>
+                <p>Разрабатывал „невероятно быстрые“™ сайты для e-commerce, оптимизировал время загрузки веб-приложения и&nbsp;ускорял переходы между страницами.</p>
+                <p>Управлял командами из&nbsp;3—6&nbsp;разработчиков, общался с&nbsp;архитекторами, менеджерами проектов и&nbsp;клиентами по&nbsp;техническим вопросам.</p>
+                <p><strong>Достижения:</strong></p>
+                <ul>
+                    <li>Сайт загружался и&nbsp;был&nbsp;готов к&nbsp;взаимодействию с&nbsp;пользователем за&nbsp;полторы секунды на телефоне с 4G связью;</li>
+                    <li>Переходы между страницами на сайте занимали меньше половины&nbsp;секунд на телефоне с 4G связью;</li>
+                    <li>После запуска наших сайтов конверсия увеличилась на 10-30% (в зависимости от проекта);</li>
+                </ul>
             </section>
             <section>
                 <header>
                     <h3>Frontend Developer, MoovCheckout
                     <br /><small>2017—2018</small></h3>
                 </header>
-                <p>Оптимизировал процесс оплаты на&nbsp;сайтах клиентов с&nbsp;помощью know-how компании.</p>
+                <p>Know-how компании —&nbsp;скрыть медленный и&nbsp;неоптимальный процесс оплаты за&nbsp;фасадом решения MoovCheckout. Это&nbsp;улучшало пользовательский опыт и&nbsp;повышало конверсию.</p>
+                <p>Интегрировал решение компании, оптимизировал интерфейсы и&nbsp;процесс взаимодействия в&nbsp;системах оплаты на&nbsp;сайтах клиентов.</p>
             </section>
             <section>
                 <header>
@@ -154,6 +137,43 @@
                 <p>Создал интерфейсы для&nbsp;нескольких проектов.</p>
                 <p>Написал дюжину проектов на&nbsp;PHP.</p>
             </section>
+
+            <h2>Сделал разные штуки</h2>
+            <div class="row row-single">
+                <div class="col-4of5">
+                    <a href="workshoptab-wizard.html" class="project-link">
+                        <img src="img/workshoptab-wizard/teaser.jpg" alt="Вокршоптаб Визард" style="border-bottom: 1px solid #ddd;">
+                        <h2 style="margin-top:0">Воркшоптаб Визард</h2>
+                        <p style="margin-top:0">проводит проверку грузовых машин с&nbsp;помощью цифрового тахографа и&nbsp;блютус-передатчика СмартЛинк.</p>
+                    </a>
+                    <div class="row">
+                        <div class="col-1of3">
+                            <a href="dtco-configurator.html" class="project-link">
+                                <img src="img/dtco-conf/teaser-dtco.png" alt="Конфигуратор тахографов" style="border-bottom: 1px solid #ddd;" />
+                                <h3 style="margin-top:0;">Конфигуратор тахографов</h3>
+                            </a>
+                        </div>
+                        <div class="col-1of3">
+                            <a href="safe-app.html" class="project-link">
+                                <img src="img/safe/teaser-safe.png" alt="С-Е-Й-Ф"/>
+                                <h3>С-Е-Й-Ф</h3>
+                            </a>
+                        </div>
+                        <div class="col-1of3">
+                            <a href="http://seigiard.com/znkmtr/" class="project-link">
+                                <img src="img/znkmr/znkmr-teaser.png" alt="Знакомер" />
+                                <h3>Знакомер</h3>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-1of5">
+                    <a href="http://seigiard.com/bureau-school-rating/" class="project-link">
+                        <h3>Рейтинг студентов школы бюро 2017</h3>
+                        <div class="rating-image" style="border-bottom: 1px solid #ddd;" title="Рейтинг студентов школы бюро 2017"></div>
+                    </a>
+                </div>
+            </div>
 
             <h2>Образование</h2>
             <section>
