Update my work list

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
                     <h3>Senior Software Engineering Manager and Architect, Moovweb&nbsp;→&nbsp;MoovForge
                     <br /><small>2019—настоящее время</small></h3>
                 </header>
-                <p>Управляю&nbsp;проектами. Беседую с&nbsp;клиентами. Управляю&nbsp;людьми. Пишу&nbsp;код.</p>
+                <p>Управляю&nbsp;проектами. Беседую с&nbsp;клиентами. Руковожу&nbsp;людьми. Пишу&nbsp;код.</p>
                 <p><strong>Достижения:</strong></p>
                 <ul>
-                    <li>Провёл миграцию существующего проекта на&nbsp;сборку и&nbsp;деплой на&nbsp;layer0.co. В&nbsp;итоге клиент мог в&nbsp;один клик переключаться с&nbsp;layer0.co на&nbsp;свою инфраструктуру и&nbsp;обратно;</li>
-                    <li>С&nbsp;командой оптимизировал сайт клиента на&nbsp;React и&nbsp;Typescript, чтобы 80%&nbsp;страниц были зелеными в&nbsp;Core&nbsp;Web&nbsp;Vitals;</li>
+                    <li>Провёл миграцию сборки и&nbsp;деплоя существующего проекта на&nbsp;layer0.co, комплексное решение для развертывания, сплит-тестирования, кеширования и мониторинга веб-приложений. В&nbsp;итоге клиент мог в&nbsp;один клик переключаться с&nbsp;layer0.co на&nbsp;свою инфраструктуру и&nbsp;обратно;</li>
+                    <li>С&nbsp;командой оптимизировал сайт клиента на&nbsp;React и&nbsp;Typescript, чтобы 80%&nbsp;страниц были зелеными в&nbsp;Core&nbsp;Web&nbsp;Vitals для усиления SEO-продвиженя сайта;</li>
                 </ul>
             </section>
             <section>
