--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html class="no-js" lang="ru">
+<html class="no-js" lang="en">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Андрей Борисенко, веб-разработчик</title>
-        <meta name="description" content="Портфолио">
+        <title>Andrew Borisenko, Web Developer</title>
+        <meta name="description" content="Results-oriented professional with more than fifteen years experience in web development.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="alternate" hreflang="ru" href="index.html" />
 
         <!-- Place favicon.ico in the root directory -->
         <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon.png">
@@ -19,62 +20,130 @@
 
         <link rel="stylesheet" href="css/typography.css">
         <link rel="stylesheet" href="css/main.css">
+        <style>
+            section + section {
+                margin-top: 2rem;
+            }
+            section h3 small {
+                font-size: 75%;
+            }
+        </style>
     </head>
     <body>
-        <!--[if lt IE 8]>
-            <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
-
-        <!-- Add your site or application content here -->
         <header class="mainpage-header">
-            <div class="mainpage-header__avatar"><img src="img/avatar-circle.jpg" alt="Андрей Борисенко" /></div>
-            <h1>Андрей Борисенко</h1>
+            <div class="mainpage-header__avatar"><img src="img/avatar.jpg" alt="Андрей Борисенко" /></div>
+            <h1>Andrew Borisenko</h1>
         </header>
+        <p class="contacts">
+            <a href="tel:+380962249364" class="inline-print-only">+38&nbsp;(096) 224-93-64</a>
+            <a href="mailto:seigiard@gmail.com">seigiard@gmail.com</a>
+        </p>
+        <h2>Summary</h2>
+        <p>Results-oriented professional with twenty years experience in Web Development.</p>
+        <p>I make it my goal to create applications and web-sites with the user in mind, creating applications with a useable and intuitive user interface experience. Also I understand the importance of creating highly readable and easily maintainable source code.</p>
+        <p>I am constantly striving to learn new technologies and look to ways to better myself in this rapidly changing industry.</p>
+        <h2>Technical Skills</h2>
+        <ul>
+            <li>Strong experience in PWA/SPA/Web App Development;</li>
+            <li>Strong Javascript knowledge;</li>
+            <li>Strong experience in Site SpeedUp and Accessibility;</li>
+            <li>Strong HTML & CSS knowledge;</li>
+            <li>Experience in UI/UX, Typography and Design</li>
+            <li>Experience in UI Prototyping & Wire framing</li>
+            <li>Experience in Agile and Scrum Processes</li>
+            <li>Experience in People Management</li>
+        </ul>
 
-        <p>Верстать начал в 1998 году, с 2003 года работаю во фронтенде. Разрабатываю сайты и приложения на JS. Умею сделать так, чтобы сайт работал на ИЕ8, если это нужно.</p>
-
-        <p>Моё увлечение — дизайн, интерфейсы и взаимодействие с пользователями. Делаю каждый проект с оглядкой на удобство пользователя.</p>
-
-        <p>Знаю OOP, FRP, Angular, React, Vue, Flux, Redux и прочие модные слова на острие технологий. Интересуюсь новинками веба и стараюсь их пощупать.</p>
-
-        <p>Почта: <a href="mailto:seigiard@gmail.com">seigiard@gmail.com</a>.</p>
-
-
-        <h2>Я сделал</h2>
-        <div class="row row-single">
-            <div class="col-4of5">
-                <a href="workshoptab-wizard.html" class="project-link">
-                    <img src="img/workshoptab-wizard/teaser.jpg" alt="Вокршоптаб Визард" style="border-bottom: 1px solid #ddd;">
-                    <h2 style="margin-top:0">Воркшоптаб Визард</h2>
-                    <p style="margin-top:0">проводит проверку грузовых машин с помощью цифрового тахографа и блютус-передатчика СмартЛинк.</p>
-                </a>
-                <div class="row">
-                    <div class="col-1of3">
-                        <a href="dtco-configurator.html" class="project-link">
-                            <img src="img/dtco-conf/teaser-dtco.png" style="border-bottom: 1px solid #ddd;">
-                            <h3 style="margin-top:0;">Конфигуратор тахографов</h3>
-                        </a>
-                    </div>
-                    <div class="col-1of3">
-                        <a href="safe-app.html" class="project-link">
-                            <img src="img/safe/teaser-safe.png">
-                            <h3>С-Е-Й-Ф</h3>
-                        </a>
-                    </div>
-                    <div class="col-1of3">
-                        <a href="http://seigiard.com/znkmtr/" class="project-link">
-                            <img src="img/znkmr/znkmr-teaser.png" alt="Знакомер">
-                            <h3>Знакомер</h3>
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-1of5">
-                <a href="http://seigiard.com/bureau-school-rating/" class="project-link">
-                    <h3>Рейтинг студентов школы бюро 2017</h3>
-                    <div class="rating-image" style="border-bottom: 1px solid #ddd;" title="Рейтинг студентов школы бюро 2017"></div>
-                </a>
-            </div>
-        </div>
+        <h2>Work Experience</h2><section>
+            <header>
+                <h3>Senior Software Engineering Manager and Architect, Moovweb&nbsp;→&nbsp;MoovForge
+                <br /><small>2019—настоящее время</small></h3>
+            </header>
+            <p>Manage projects. Talk with clients. Lead people. Write code.</p>
+            <p><strong>Achievements:</strong></p>
+            <ul>
+                <li>Updated CI/CD processes of existing project from their own infrastructure to layer0.co, all-in-one Jamstack platform to develop, deploy, preview, split test and monitor your frontend. At the end the client can switching from layer0.co to their own environment and back in one click;</li>
+                <li>Optimized client's heavy React-based site. 80%&nbsp;of pages are green in&nbsp;Core&nbsp;Web&nbsp;Vitals stats;</li>
+            </ul>
+        </section>
+        <section>
+            <header>
+                <h3>Frontend Engineer / Team Lead, Moovweb
+                <br /><small>2018—2019</small></h3>
+            </header>
+            <p>Developed sub-second e-commerce sites, optimized SPA/PWA load and init time and speeded up page-to-page transition time.</p>
+            <p>Managed 3-6 engineers teams, communicated with architects, PMs and clients.</p>
+            <p><strong>Achievements:</strong></p>
+            <ul>
+                <li>SPA/PWA load and init time is less then second and half on a phone with 4G;</li>
+                <li>Page-to-page transition is less then half-second on a phone with 4G;</li>
+                <li>After projects' launch conversion increased by 10-30% (depending on the project);</li>
+            </ul>
+        </section>
+        <section>
+            <header>
+                <h3>Frontend Developer, MoovCheckout
+                <br /><small>2017—2018</small></h3>
+            </header>
+            <p>The Know-How is&nbsp;to&nbsp;hide slow and&nbsp;laggy original checkout process behind MoovCheckout solution. It&nbsp;improves UX and&nbsp;insrease conversion rate.</p>
+            <p>Implement company's solution, optimised&nbsp;UI and&nbsp;UX in&nbsp;checkout processes on&nbsp;clients' sites.</p>
+            <p><small>Technologies: MoovJS Framework, JS, HTML, CSS</small></p>
+        </section>
+        <section>
+            <header>
+                <h3>Head of&nbsp;Front-End Department, Cloud Consulting&nbsp;AS
+                    <br /><small>2015—2017</small></h3>
+            </header>
+            <dl>
+                <dt>WorkshopTab Wizard Interface Builder</dt>
+                <dd>Invented and&nbsp;made app that makes HTML prototypes of&nbsp;screens of&nbsp;real JAVA application and&nbsp;generates FXML-layouts. It&nbsp;helps developer team to&nbsp;communicate with managers and&nbsp;works faster.
+                    <br><small>Technologies: Harp.js, JS, HTML, CSS, FXML</small>
+                </dd>
+                <dt>DTCO Configurator</dt>
+                <dd>Made and prototyped UI of&nbsp;application that helps configure digital tachographs.
+                    <br><small>Technologies: Sketch, Flinto, Xamarin</small>
+                </dd>
+                <dt>NCF Event Calendar</dt>
+                <dd>Renovate UI&nbsp;system of&nbsp;web-app, built frontend part&nbsp;of&nbsp;service.
+                    <br><small>Technologies: Vue.js, HTML, CSS</small>
+                </dd>
+            </dl>
+        </section>
+        <section>
+            <header>
+                <h3>Senior Frontend JavaScript Developer, Cloud Consulting&nbsp;AS
+                    <br /><small>2013—2015</small></h3>
+            </header>
+            <dl>
+                <dt>Fartskriver SAFE APP</dt>
+                <dd>Made UI of mobile app, developed mobile app, developed frontend web-app.
+                    <br><small>Technologies: Sketch, Angular, HTML, CSS</small>
+                </dd>
+            </dl>
+            <p>Made number of&nbsp;applications/prototypes/mockups based on&nbsp;JS frameworks or&nbsp;pure HTML+CSS+JS with&nbsp;backend on&nbsp;Ruby / Java</p>
+        </section>
+        <section>
+            <header>
+                <h3>Frontend Developer / UX designer, razzom.com
+                    <br /><small>2012—2013</small></h3>
+            </header>
+            <p>Made frontend part of&nbsp;service, analyzed and&nbsp;improved UI&nbsp;solutions.</p>
+        </section>
+        <section>
+            <header>
+                <h3>Web Developer, Artais Web Studio
+                    <br /><small>2008—2013</small></h3>
+            </header>
+            <p>Developing the&nbsp;web-framework for&nbsp;typical sites based on&nbsp;company's CMS.</p>
+            <p>Made&nbsp;up over&nbsp;50&nbsp;sites using HTML5, CSS3 and&nbsp;JS.</p>
+        </section>
+        <section>
+            <header>
+                <h3>Frontend Web Developer / UX Designer, Freelance
+                    <br /><small>2005—2013</small></h3>
+            </header>
+            <p>Developed more than hundred sites using HTML, CSS and&nbsp;JS.</p>
+            <p>Had a&nbsp;few UI&nbsp;projects and&nbsp;a&nbsp;dozen of&nbsp;PHP&nbsp;projects.</p>
+        </section>
     </body>
 </html>
